# apps-tech.flecs.ample

./: .gitmodules  LICENSE  README.md  manifest.json
.github/workflows/: app_release.yml
app/: CMakeLists.txt
app/src/: example_app.cpp
docker/: Dockerfile  Dockerfile.debug  versions
